--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ SMPED/BPC/\.ipynb_checkpoints/
 spatial_sql/
 
 mapa_novo/distritos-*\.json
+
+flask/free_wheels/\.ipynb_checkpoints/
+
+SMPED/BPC/jupyter/data/
